Bug 337015 - 'Find' window crashes Kexi after some searching
Summary: 'Find' window crashes Kexi after some searching
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.9 Alpha
Platform: Mint (Ubuntu based) Linux
: NOR crash
Target Milestone: 2.9.1
Assignee: Kexi Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-03 17:44 UTC by Ian Balchin
Modified: 2019-02-18 19:39 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.1
Sentry Crash Report:
staniek: Usability+


Attachments
find window showing errant behaviour (13.83 KB, image/png)
2014-09-17 16:43 UTC, Ian Balchin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Balchin 2014-07-03 17:44:19 UTC
After a session of finding and editing records the 'Find' window refuses to close at some stage. The normal contents of the window are replaced by either transparency, or a copy of the Form window beneath.

Reproducible: Sometimes

Steps to Reproduce:
No known sequence of steps to reproduce this.
Actual Results:  
The 'Find' box will not close after some extensive useage of searching and editing records.

Expected Results:  
That the Find box will close at any time.

There is a pattern of misbehaviour that becomes apparent after some extended use of find-edit procedures. 
These include:

The 'Find' window cannot be closed. neither the 'Close' button nor the 'x' at top of the box will close the window, so then we roll it up to put it out of the way. Everything else is running normally.

The rolled-up window when then rolled down is just a transparent frame, the Form is seen through this
Clicking on the 'Find' (binocular' icon will then fill the frame with a section of the Form This can be dragged around with no other adverse video affects, but the contained 'Form' image remains in the window.

If the window is then rolled up, then clicking on the 'Find' icon and rolling the window down will reveal a functional 'Find' box. But this still cannot be closed. [Alternatively, rolling the window up, dragging the box around, and then rolling down again _may_ possibly also reveal a functional 'Find' box]

At this stage the 'Find' box still cannot be closed. The box will only be closed when exiting Kexi. It remains there when the current application is exited. 

Eventually we may enter a worse scenario where Kexi must be closed and restarted. This behaviour does not appear to cause specific crashes. 

I need more of these events to verify this complete sequence and determine behaviour definitively.

This bug was apparent on earlier versions.
Comment 1 Jarosław Staniek 2014-07-07 12:12:03 UTC
I've found a crash that happens when searching backward past the first cell (I guess), no idea if that's related. When it's fixed you'd be able to verify if also this bug #337015 got fixed.
Comment 2 Ian Balchin 2014-09-17 16:43:18 UTC
Created attachment 88725 [details]
find window showing errant behaviour

prior to this, which occurred when moving the screenshot utility gui over the Find window, we had a situation where the Find window

a. would not close
b when rolled down was blank
c at some stage was transparent see through, in fact the tickbox to the top right of the screenshot indicates that it was in that state at that time since that is  a part of my form
d would only return to functionality when rolled up, then click the Find button, then roll down.

this is a recurring issue.

Ian
Comment 3 Ian Balchin 2014-12-04 08:31:34 UTC
this bug also contributes to the issue of difficulties experienced in daily use. It would be great if this could be prioritised to the next release.
Comment 4 Roman Shtemberko 2015-02-27 12:22:20 UTC
Git commit 1bc0758ad4f1a8cccd55306471384977e90ea374 by Roman Shtemberko.
Committed on 27/02/2015 at 12:15.
Pushed by rshtemberko into branch 'calligra/2.9'.

Fix crash on backward search
REVIEW:122720

M  +9    -5    kexi/widget/dataviewcommon/kexidataawareobjectiface.cpp

http://commits.kde.org/calligra/1bc0758ad4f1a8cccd55306471384977e90ea374