Fix crash on backward search

BUG:337015
REVIEW:122720